--- a/partner-hospitals.html
+++ b/partner-hospitals.html
@@ -83,7 +83,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
+            <li><a href="hospital-login.html" style="background-color: rgba(255,255,255,0.2); padding: 0.5rem 1rem; border-radius: 5px; border: 1px solid white;">Hospital Login</a></li>
         </ul>
     </nav>
 
@@ -138,14 +138,55 @@
                 supporting cancer patients through verified fundraising campaigns.
             </p>
             <p style="font-size: 1.1rem; line-height: 1.8;">
-                <strong>Contact us:</strong> partnerships@cancercare.org | +237 XXX XXX XXX
+                <strong>Contact us:</strong><br>
+                +237 680 480 725<br>
+                +237 681 018 022
+            </p>
+            <p style="font-size: 0.95rem; color: #666; margin-top: 1rem;">
+                Available Monday - Friday, 8AM - 5PM
             </p>
         </div>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>CancerCare</h3>
+                <p>Supporting cancer patients in Yaoundé through community-driven fundraising and health education.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="campaigns.html">Active Campaigns</a></li>
+                    <li><a href="events.html">Health Events</a></li>
+                    <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Get Involved</h4>
+                <ul>
+                    <li><a href="create-account.html">Create Account</a></li>
+                    <li><a href="donate.html">Make a Donation</a></li>
+                    <li><a href="verification.html">Patient Verification</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p style="font-size: 0.9rem; margin: 0.5rem 0;">
+                    <strong>Phone:</strong><br>
+                    +237 680 480 725<br>
+                    +237 681 018 022
+                </p>
+                <p style="font-size: 0.9rem; margin-top: 1rem;">
+                    Available Monday - Friday, 8AM - 5PM
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
@@ -155,7 +196,38 @@
             const container = document.getElementById('hospitalsList');
             container.innerHTML = '';
             
-            partnerHospitals.forEach(hospital => {
+            // Get registered hospitals from localStorage
+            const registeredHospitals = JSON.parse(localStorage.getItem('hospitals') || '[]');
+
+            // Combine default partner hospitals with approved registered hospitals
+            const allHospitals = [...partnerHospitals];
+
+            // Add approved registered hospitals
+            registeredHospitals.forEach(hospital => {
+                if (hospital.status === 'active' && hospital.verified) {
+                    allHospitals.push({
+                        name: hospital.hospitalName,
+                        location: hospital.address,
+                        phone: '+237 ' + hospital.phone,
+                        services: hospital.services || 'Oncology Department, Cancer Screening, Patient Verification',
+                        verified: true
+                    });
+                }
+            });
+
+            // Display all hospitals
+            if (allHospitals.length === 0) {
+                container.innerHTML = `
+                    <div class="card" style="text-align: center; padding: 2rem;">
+                        <p style="color: #666; font-size: 1.1rem;">
+                            No partner hospitals available at the moment.
+                        </p>
+                    </div>
+                `;
+                return;
+            }
+
+            allHospitals.forEach(hospital => {
                 const hospitalHTML = `
                     <div class="hospital-card">
                         <div class="hospital-header">
